add data for SNR and completing SNR part

--- a/ProcessingPipeline/ShowingProcessingPipeline.ipynb
+++ b/ProcessingPipeline/ShowingProcessingPipeline.ipynb
@@ -38,7 +38,7 @@
       "90% done...\n",
       "Parsing data...\n",
       "No missing timestamps in data.\n",
-      "Done!  Elapsed time: 2.3 seconds\n",
+      "Done!  Elapsed time: 2.5 seconds\n",
       "Filtering Data...\n",
       "Filtering Done!\n",
       "\n",
@@ -69,13 +69,42 @@
       "90% done...\n",
       "Parsing data...\n",
       "No missing timestamps in data.\n",
-      "Done!  Elapsed time: 2.1 seconds\n"
+      "Done!  Elapsed time: 2.3 seconds\n",
+      "\n",
+      "Reading Intan Technologies RHS Data File, Version 3.3\n",
+      "\n",
+      "Found 16 amplifier channels.\n",
+      "Found 0 board ADC channels.\n",
+      "Found 0 board DAC channels.\n",
+      "Found 0 board digital input channels.\n",
+      "Found 0 board digital output channels.\n",
+      "\n",
+      "File contains 60.002 seconds of data.  Amplifiers were sampled at 30.00 kS/s.\n",
+      "numsamples and numblocks\n",
+      "1800064\n",
+      "14063\n",
+      "FINISHED HEADER\n",
+      "\n",
+      "Allocating memory for data...\n",
+      "Reading data from file...\n",
+      "10% done...\n",
+      "20% done...\n",
+      "30% done...\n",
+      "40% done...\n",
+      "50% done...\n",
+      "60% done...\n",
+      "70% done...\n",
+      "80% done...\n",
+      "90% done...\n",
+      "Parsing data...\n",
+      "No missing timestamps in data.\n",
+      "Done!  Elapsed time: 2.4 seconds\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x2c480040700>]"
+       "[<matplotlib.lines.Line2D at 0x25d0105a670>]"
       ]
      },
      "execution_count": 2,
@@ -97,8 +126,8 @@
     "print(\"This code takes about 5-10 mins to run\")\n",
     "import sys\n",
     "import os\n",
-    "sys.path.append(os.path.abspath(\"../../\"))\n",
-    "from organoidContour import preprocessing\n",
+    "sys.path.append(os.path.abspath(\"..\"))\n",
+    "from organoid_contour import preprocessing\n",
     "%matplotlib inline\n",
     "sampling_rate = 30000\n",
     "use_raw_data = 1\n",
