change name of the package and existing scripts importing from it

--- a/ProcessingPipeline/ShowingProcessingPipeline.ipynb
+++ b/ProcessingPipeline/ShowingProcessingPipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
       "90% done...\n",
       "Parsing data...\n",
       "No missing timestamps in data.\n",
-      "Done!  Elapsed time: 2.5 seconds\n",
+      "Done!  Elapsed time: 2.2 seconds\n",
       "Filtering Data...\n",
       "Filtering Done!\n",
       "\n",
@@ -98,16 +98,16 @@
       "90% done...\n",
       "Parsing data...\n",
       "No missing timestamps in data.\n",
-      "Done!  Elapsed time: 2.4 seconds\n"
+      "Done!  Elapsed time: 2.3 seconds\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x25d0105a670>]"
+       "[<matplotlib.lines.Line2D at 0x2910002d9d0>]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -127,7 +127,7 @@
     "import sys\n",
     "import os\n",
     "sys.path.append(os.path.abspath(\"..\"))\n",
-    "from organoid_contour import preprocessing\n",
+    "from electrophysiology_mapping import preprocessing\n",
     "%matplotlib inline\n",
     "sampling_rate = 30000\n",
     "use_raw_data = 1\n",
@@ -381,9 +381,7 @@
     "\n",
     "import sys\n",
     "sys.path.append('E:\\\\Desktop\\\\omipolar\\\\DataPlotting')\n",
-    "import organoidContour as oc\n",
-    "from organoidContour import data\n",
-    "from organoidContour import preprocessing\n",
+    "from electrophysiology_mapping import preprocessing\n",
     "sys.path.append('E:\\\\Desktop\\\\omipolar\\\\DataPlotting\\\\load_intan_rhs_format')\n",
     "import load_intan_rhs_format as ld\n",
     "import numpy as np\n",
