adding example data for JKCO6 E4031

--- a/AmplituteISIFPD/JKCO6E4031.ipynb
+++ b/AmplituteISIFPD/JKCO6E4031.ipynb
@@ -9,6 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Channels are not used for FPD are removed manually after obtaining the data\n",
       "\n",
       "Reading Intan Technologies RHS Data File, Version 3.3\n",
       "\n",
@@ -37,7 +38,7 @@
       "90% done...\n",
       "Parsing data...\n",
       "No missing timestamps in data.\n",
-      "Done!  Elapsed time: 2.3 seconds\n",
+      "Done!  Elapsed time: 2.2 seconds\n",
       "Filtering Data...\n",
       "Filtering Done!\n",
       "Condition: 0Baseline, Intan Channel: 0\n",
@@ -185,7 +186,7 @@
       "90% done...\n",
       "Parsing data...\n",
       "No missing timestamps in data.\n",
-      "Done!  Elapsed time: 2.3 seconds\n",
+      "Done!  Elapsed time: 2.1 seconds\n",
       "Filtering Data...\n",
       "Filtering Done!\n",
       "Condition: E4031JKCO6, Intan Channel: 0\n",
@@ -376,7 +377,7 @@
    ],
    "source": [
     "print(\"Channels are not used for FPD are removed manually after obtaining the data\")\n",
-    "\n",
+    "print(\"Expected running time of this script is ~1min\")\n",
     "# Constants\n",
     "SAMPLING_RATE = 10000\n",
     "CUTOFF_FREQUENCY = 1000\n",
@@ -394,8 +395,8 @@
     "sys.path.append(os.path.abspath(\"../\"))\n",
     "from electrophysiology_mapping import preprocessing\n",
     "\n",
-    "BASELINE_PATH = \"E:\\Desktop\\omipolar\\DataPlotting\\JKCO\\JKCO6\\DrugData\\isoser\\JK CO6 in medi after Ca imaging iso sero_240529_133200\\JK CO6 in medi after Ca imaging iso sero_240529_133500.rhs\"\n",
-    "DRUG_PATH =     \"E:\\Desktop\\omipolar\\DataPlotting\\JKCO\\JKCO6\\DrugData\\isoser\\JK CO6 in medi after Ca imaging iso sero_240529_133200\\JK CO6 in medi after Ca imaging iso sero_240529_135500.rhs\"\n",
+    "BASELINE_PATH = \"..\\ExampleData\\JK CO6 in medi after Ca imaging iso sero_240529_133500.rhs\"\n",
+    "DRUG_PATH =     \"..\\ExampleData\\JK CO6 in medi after Ca imaging iso sero_240529_135500.rhs\"\n",
     "\n",
     "#Channel information\n",
     "condition_drug = 'E4031JKCO6'\n",
@@ -743,13 +744,6 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
