add Isopt314 into example of spike parameter analysis, as well as corresponding data

--- a/AmplituteISIFPD/JKCO6E4031.ipynb
+++ b/AmplituteISIFPD/JKCO6E4031.ipynb
@@ -376,8 +376,9 @@
     }
    ],
    "source": [
-    "print(\"Channels are not used for FPD are removed manually after obtaining the data\")\n",
+    "print(\"Channels are not used for FPD are removed manually after obtaining the data but not in this script\")\n",
     "print(\"Expected running time of this script is ~1min\")\n",
+    "Channels_Used_For_FPD = [0, 1, 2, 3,4, 24, 25, 26, 27, 29, 30]\n",
     "# Constants\n",
     "SAMPLING_RATE = 10000\n",
     "CUTOFF_FREQUENCY = 1000\n",
@@ -406,7 +407,7 @@
     "TARGET_INDICES = [0, 1, 2, 3,4, 8,  9,  10, 11, 12, 13, 14, 15]\n",
     "INTAN_CHANNELS = [0, 1, 2, 3,4, 24, 25, 26, 27, 28, 29, 30, 31]\n",
     "\n",
-    "Channels_Used_For_FPD = [0, 1, 2, 3,4, 24, 25, 26, 27, 29, 30]\n",
+    "\n",
     "# Custom settings for FPD window and peak detection\n",
     "CUSTOM_SETTINGS = {\n",
     "    'Baseline': {\n",
