update calcium processing (partial)

--- a/ComparingCalciumAndElectrophysiologyData/CompareSlopeAndPeakDetectionForLAT.ipynb
+++ b/ComparingCalciumAndElectrophysiologyData/CompareSlopeAndPeakDetectionForLAT.ipynb
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
     "#peaks = peaks_neo\n",
     "for i in range(target_data.shape[0]):    \n",
     "    # filtered_data[i] = filtfilt(b, a, target_data[i,60000:120000])\n",
-    "    if i in [4,7]:\n",
+    "    if i in [4,7]:#removing frequency dependent artifact in these channels\n",
     "        filtered_data[i] = filtfilt(b, a, target_data[i,60*sampling_rate:120*sampling_rate])\n",
     "        filtered_data[i] = filtfilt(b_2, a_2,filtered_data[i])\n",
     "        filtered_data[i] = filtfilt(b_3, a_3,filtered_data[i])\n",
